# ray-tracer

./: .gitmodules  CMakeLists.txt
assets/shaders/: ray_tracing.comp  texture.frag  texture.vert
src/: camera.cpp  camera.h  main.cpp  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_common.h  vulkan_descriptor_allocator.cpp  vulkan_descriptor_allocator.h  vulkan_descriptor_builder.cpp  vulkan_descriptor_builder.h  vulkan_descriptor_layout_cache.cpp  vulkan_descriptor_layout_cache.h  vulkan_device.cpp  vulkan_device.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_resources.cpp  vulkan_resources.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h
